# Pydantic-AI-Example-Decisions

./: .env.example  .gitignore  README.md  agent_test.ipynb  main.py  pydantic-ai-lightning-talk.md  pydantic-ai-presentation.md  pyproject.toml
api/: __init__.py
api/agents/: decision_making_agent.py
api/auth/: __init__.py  dependencies.py  jwt_utils.py
api/models/: __init__.py  decision.py
api/routes/: __init__.py  auth.py  decisions.py
api/templates/: index.html  lightning-talk.html  presentation.html
api/utils/: __init__.py  embeddings.py  llms.py
